AUTH FLOW IMPLEMENTATION

--- a/package.json
+++ b/package.json
@@ -60,10 +60,12 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
+    "mysql2": "^3.11.5",
     "nodemailer": "^6.3.1",
     "pg": "^8.13.1",
     "pm2": "^5.1.0",
     "sequelize": "^6.37.5",
+    "uuid": "^11.0.3",
     "winston": "^3.2.1"
   },
   "devDependencies": {
